welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:5: error: too many arguments for method dogHouse: ()Unit
dogHouse(3);
        ^