welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse() {avance()
avance()
left()}
dogHouse(3);
